# lib-tender-identifiers

./: .gitignore  Cargo.toml  README.md  makefile  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
.old/typescript/: deps.spec.ts  index.spec.ts  index.ts  modules.d.ts
ExampleAndroidApp/: settings.gradle
ExampleAndroidApp/app/: build.gradle
ExampleAndroidApp/app/src/main/: AndroidManifest.xml
ExampleAndroidApp/app/src/main/res/menu/: menu_main.xml
ExampleAndroidApp/app/src/main/res/values/: strings.xml
ExampleAndroidApp/ed25519lib/src/main/res/values/: strings.xml
ExampleAndroidApp/gradle/wrapper/: gradle-wrapper.properties
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: content_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: strings.xml
android/ed255192/src/main/: AndroidManifest.xml
android/ed255192/src/main/res/values/: strings.xml
android/ed25519lib/: local.properties
android/ed25519lib/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/rustylibrary/src/main/: AndroidManifest.xml
android/rustylibrary/src/main/res/values/: strings.xml
ios-nums/: nums.swift
ios/ed25-ios-app/ed25-ios-app/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/ed25-ios-app/ed25-ios-app.xcodeproj/: project.pbxproj
ios/ed25-ios-app/ed25-ios-app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/ed25-ios-app/ed25-ios-app.xcodeproj/project.xcworkspace/xcuserdata/me.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ed25-ios-app/ed25-ios-app.xcodeproj/xcuserdata/me.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/ed25-ios-app/ed25-ios-app/Base.lproj/: Main.storyboard
ios/include/: rustylib.h
rust/: Cargo.toml
rust/bindings/android/: Cargo.toml
rust/bindings/ios/: Cargo.toml
rust/bindings/ios/src/: lib.rs
rust/bindings/wasm/: Cargo.toml
rust/src/: _tests.rs  errors.rs  js.rs  lib.rs  lib_nodalek.rs  tofromB64.rs  ts_fns.rs  util.rs
rust/src/bindings/: android.rs  ios.rs  mod.rs  ts_fns.rs
rust/src/utils/: mod.rs
src/: index.spec.ts  index.ts
typescript/: axlsign.d.ts  deps.spec.ts  index.spec.ts  index.ts  modules.d.ts
typescript/src/: index.spec.ts  index.ts
(+18 files in other folders)
