[package]
name = "tender_identifiers"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"
publish = true

[lib]
name = "tender_identifiers"
crate-type =["staticlib", "cdylib", "lib"]

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["nightly"] }
blake2 = "0.8"
bip39 = "0.6.0-beta.1"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.12.0"

# [target.'cfg(target_arch = "wasm32")'.dependenices]
# console_error_panic_hook = "0.1.6"
# wasm-bindgen = "=0.2"
# js-sys = "=0.3.35"

# [target.'cfg(target_os = "android")'.dependencies]
# jni = { version = "0.14.0", default-features = false }

# [target.'cfg(target_os = "ios")'.dependencies]
# libc = "0.2.68"
# c_vec = "^1.0.0"

