[package]
name = "wasm"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "=0.2"
js-sys = "=0.3.35"